# libmrh

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Application_Run_Loop/: Application_Run_Loop.drawio  Application_Run_Loop.rst
doc/source/Building/: Building.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/libmrh_Directory/Error/MRH_AppError/: MRH_App_Error_Type.rst
doc/source/Enumerations/libmrh_Directory/Event/V1/MRH_Application_V1/: MRH_A_DefaultApp.rst
doc/source/Enumerations/libmrh_Directory/Event/V1/MRH_Listen_V1/: MRH_L_InputMethod.rst  MRH_L_StringType.rst
doc/source/Enumerations/libmrh_Directory/Event/V1/MRH_Notification_V1/: MRH_N_NotificationAvailable.rst
doc/source/Enumerations/libmrh_Directory/Event/V1/MRH_Say_V1/: MRH_S_OutputMethod.rst  MRH_S_StringType.rst
doc/source/Enumerations/libmrh_Directory/Event/V1/MRH_User_V1/: MRH_U_Content.rst
doc/source/Enumerations/libmrh_Directory/File/User/MRH_PersonFile/: MRH_File_Person_Info.rst
doc/source/Enumerations/libmrh_Directory/File/User/MRH_ResidenceFile/: MRH_File_Residence_Info.rst
doc/source/Enumerations/libmrh_Directory/MRH_AppLog/: MRH_Log_Level.rst
doc/source/Events/: Events.rst
doc/source/Events/V1/Service/: MRH_Application.rst  MRH_Custom.rst  MRH_Listen.rst  MRH_Notification.rst  MRH_Password.rst  MRH_Say.rst  MRH_User.rst
doc/source/Events/V1/User/: MRH_Application.rst  MRH_Custom.rst  MRH_Listen.rst  MRH_Notification.rst  MRH_Password.rst  MRH_Say.rst  MRH_User.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/_Internal/libmrh_Directory/Error/MRH_AppErrorInternal/: MRH_ERR_SetAppError.rst
doc/source/Functions/_Internal/libmrh_Directory/Event/MRH_HandleEvent/: MRH_EV_Check.rst  MRH_EV_Copy.rst  MRH_EV_Create.rst  MRH_EV_Destroy.rst
doc/source/Functions/_Internal/libmrh_Directory/File/MRH_File/: MRH_FILE_ReadIdentifier.rst  MRH_FILE_ReplaceValue.rst
doc/source/Functions/libmrh_Directory/Error/MRH_AppError/: MRH_ERR_AppReset.rst  MRH_ERR_GetAppError.rst  MRH_ERR_GetAppErrorString.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_Application_V1/: MRH_A_AvailableEvent.rst  MRH_A_AvailableResult.rst  MRH_A_CustomCommandEvent.rst  MRH_A_CustomCommandResult.rst  MRH_A_GetDefaultAppEvent.rst  MRH_A_GetDefaultAppResult.rst  MRH_A_LaunchClearEvent.rst  MRH_A_LaunchClearResult.rst  MRH_A_LaunchClearTimedEvent.rst  MRH_A_LaunchClearTimedResult.rst  MRH_A_LaunchEvent.rst  MRH_A_LaunchResult.rst  MRH_A_LaunchTimedEvent.rst  MRH_A_LaunchTimedReminderResult.rst  MRH_A_LaunchTimedResult.rst  MRH_A_SetDefaultAppEvent.rst  MRH_A_SetDefaultAppResult.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_Custom_V1/: MRH_C_CustomCommandEvent.rst  MRH_C_CustomCommandResult.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_Listen_V1/: MRH_L_AvailableEvent.rst  MRH_L_AvailableResult.rst  MRH_L_ConvertString.rst  MRH_L_CustomCommandEvent.rst  MRH_L_CustomCommandResult.rst  MRH_L_GetInputMethodEvent.rst  MRH_L_GetInputMethodResult.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_Notification_V1/: MRH_N_AvailableEvent.rst  MRH_N_AvailableResult.rst  MRH_N_CheckAvailableEvent.rst  MRH_N_CheckAvailableResult.rst  MRH_N_CreateResult.rst  MRH_N_CreateTimePointEvent.rst  MRH_N_CreateTimerEvent.rst  MRH_N_CustomCommandEvent.rst  MRH_N_CustomCommandResult.rst  MRH_N_DestroyEvent.rst  MRH_N_DestroyResult.rst  MRH_N_RecieveNextEvent.rst  MRH_N_RecieveNextResult.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_Password_V1/: MRH_P_AvailableEvent.rst  MRH_P_AvailableResult.rst  MRH_P_CheckEvent.rst  MRH_P_CheckResult.rst  MRH_P_CustomCommandEvent.rst  MRH_P_CustomCommandResult.rst  MRH_P_SetEvent.rst  MRH_P_SetResult.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_Say_V1/: MRH_S_AvailableEvent.rst  MRH_S_AvailableResult.rst  MRH_S_CheckPerformedOutput.rst  MRH_S_ConvertString.rst  MRH_S_CustomCommandEvent.rst  MRH_S_CustomCommandResult.rst  MRH_S_GetOutputMethodEvent.rst  MRH_S_GetOutputMethodResult.rst
doc/source/Functions/libmrh_Directory/Event/V1/MRH_User_V1/: MRH_U_AvailableEvent.rst  MRH_U_AvailableResult.rst  MRH_U_ContentAccessEvent.rst  MRH_U_ContentAccessResult.rst  MRH_U_ContentClearEvent.rst  MRH_U_ContentClearResult.rst  MRH_U_CustomCommandEvent.rst  MRH_U_CustomCommandResult.rst  MRH_U_GetLocationEvent.rst  MRH_U_GetLocationResult.rst
doc/source/Functions/libmrh_Directory/MRH_AppLog/: MRH_AppLog.rst
doc/source/Functions/libmrh_Directory/MRH_AppLoop/: MRH_CanExit.rst  MRH_Exit.rst  MRH_Init.rst  MRH_ReceiveEvent.rst  MRH_RecieveEvent.rst  MRH_SendEvent.rst
doc/source/Functions/libmrh_Directory/MRH_AppRevision/: MRH_GetAppLibraryVersionMajor.rst  MRH_GetAppLibraryVersionMinor.rst  MRH_GetAppLibraryVersionPatch.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/libmrh_Directory/MRH_AppRevision/: MRH_APP_LIB_VERSION_MAJOR.rst  MRH_APP_LIB_VERSION_MINOR.rst  MRH_APP_LIB_VERSION_PATCH.rst
doc/source/Structs/: Structs.rst
include/libmrh/: libmrh.h
include/libmrh/libmrh/: MRH_AppLog.h  MRH_AppLoop.h  MRH_AppRevision.h
include/libmrh/libmrh/Error/: MRH_AppError.h
include/libmrh/libmrh/Event/: MRH_Application.h  MRH_Custom.h  MRH_Listen.h  MRH_Notification.h  MRH_Password.h  MRH_Say.h  MRH_User.h
include/libmrh/libmrh/Event/V1/: MRH_Application_V1.h  MRH_Custom_V1.h  MRH_Listen_V1.h  MRH_Notification_V1.h  MRH_Password_V1.h  MRH_Say_V1.h  MRH_User_V1.h
include/libmrh/libmrh/File/User/: MRH_PersonFile.h  MRH_ResidenceFile.h
src/libmrh/: MRH_AppLog.c  MRH_AppRevision.c
src/libmrh/Error/: MRH_AppError.c  MRH_AppErrorInternal.h
src/libmrh/Event/: MRH_HandleEvent.c  MRH_HandleEvent.h
src/libmrh/Event/V1/: MRH_Application_V1.c  MRH_Custom_V1.c  MRH_Listen_V1.c  MRH_Notification_V1.c  MRH_Password_V1.c  MRH_Say_V1.c  MRH_User_V1.c
src/libmrh/File/: MRH_File.c  MRH_File.h
src/libmrh/File/User/: MRH_PersonFile.c  MRH_ResidenceFile.c
(+26 files in other folders)
